--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -5,12 +5,15 @@
   "InvestSimple.Hide": "Hide V1",
   "InvestSimple.InterestRate": "Interest Rate",
   "InvestSimple.AvailableBalance": "Available Balance",
+  "InvestSimple.InvestedBalance": "Invested",
 
   "Asset.InterestRate": "Interest Rate",
   "Asset.AvailableBalance": "Available Balance",
   "Asset.Disabled": "Disabled",
-  "Asset.Earn": "Earn",
-  "Asset.Claim": "Claim",
+  "Asset.Earn": "Deposit liquidity tokens",
+  "Asset.Claim": "Withdraw liquidity tokens",
+  "Asset.Update": "Update",
+  "Asset.Rebase": "Distribute rebase bonus",
   "Asset.Deposit": "Deposit",
   "Asset.Withdraw": "Withdraw",
   "Asset.ClaimRewards": "Claim Rewards",
