--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -13,7 +13,7 @@
   "Asset.Earn": "Deposit liquidity tokens",
   "Asset.Claim": "Withdraw liquidity tokens",
   "Asset.Update": "Update",
-  "Asset.Rebase": "Distribute rebase bonus",
+  "Asset.Rebase": "Distribute Bonus",
   "Asset.Deposit": "Deposit",
   "Asset.Withdraw": "Withdraw",
   "Asset.ClaimRewards": "Claim Rewards",
